Crash when changing shader to nodegroup in properties #96386

Closed
opened 2022-03-13 05:21:10 +01:00 by Min Ki Jeong · 12 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14761 Core Profile Context 21.10.2 30.0.13025.5005

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: 3.0.1(MS Store)

Short description of error
Crash when changing shader to nodegroup in properties

A crash occurs when applying shaders made of node groups in properties. It doesn't seem like it's a complicated issue. It's the same whether using Principled or Diffuse.
However, the method through the shader node editor works normally.

Exact steps for others to reproduce the error

  • Open .blend file
  • In material properties tab: Surface -> Select NodeGroup

Screenshot_20220313_002.png
Test.blend
Test.crash.txt

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14761 Core Profile Context 21.10.2 30.0.13025.5005 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: 3.0.1(MS Store) **Short description of error** Crash when changing shader to nodegroup in properties A crash occurs when applying shaders made of node groups in properties. It doesn't seem like it's a complicated issue. It's the same whether using Principled or Diffuse. However, the method through the shader node editor works normally. **Exact steps for others to reproduce the error** - Open .blend file - In material properties tab: Surface -> Select NodeGroup ![Screenshot_20220313_002.png](https://archive.blender.org/developer/F12924424/Screenshot_20220313_002.png) [Test.blend](https://archive.blender.org/developer/F12928727/Test.blend) [Test.crash.txt](https://archive.blender.org/developer/F12924423/Test.crash.txt)
Author

Added subscriber: @Ganke

Added subscriber: @Ganke
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Hi, thanks for the report. So far I'm not able to get the crash.
Please upload the file where crash occurs

Hi, thanks for the report. So far I'm not able to get the crash. Please upload the file where crash occurs
Author

This comment was removed by @Ganke

*This comment was removed by @Ganke*
Author

In #96386#1323412, @PratikPB2123 wrote:
Hi, thanks for the report. So far I'm not able to get the crash.
Please upload the file where crash occurs

Test.blend
I upload the save file first, but I'm confused that this situation only happened to me. As I updated to 3.1, the same thing is happening all the time whether it is an existing save file or a new save file. I wondered if this happened while taking over the 3.0.1 data, so I tried a factory reset, but the situation was the same.

> In #96386#1323412, @PratikPB2123 wrote: > Hi, thanks for the report. So far I'm not able to get the crash. > Please upload the file where crash occurs [Test.blend](https://archive.blender.org/developer/F12928727/Test.blend) I upload the save file first, but I'm confused that this situation only happened to me. As I updated to 3.1, the same thing is happening all the time whether it is an existing save file or a new save file. I wondered if this happened while taking over the 3.0.1 data, so I tried a factory reset, but the situation was the same.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Thanks, I can confirm. First bad commit appears to be 7e712b2d6a
@JacquesLucke , can you check?

Thanks, I can confirm. First bad commit appears to be 7e712b2d6a @JacquesLucke , can you check?

This issue was referenced by 731f377783

This issue was referenced by 731f3777836999c425888e22dba140bda18a09be

This issue was referenced by 79ae5f5014

This issue was referenced by 79ae5f50149a4015624ec8a36c45a72e6d45798a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-03-16 11:24:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96386
No description provided.