Fix T96386: crash when changing shader to node group in properties

The previous code updated the wrong node tree. The result was that
the new group node did not have the socket that was supposed to
be linked.